kfreebsd-10 (10.0~svn252032-2) UNRELEASED; urgency=low

  * Remove 951_disable_mk_magic.diff, use -DWITHOUT_CTF instead.

 -- Robert Millan <rmh@debian.org>  Tue, 02 Jul 2013 17:05:10 +0200

kfreebsd-10 (10.0~svn252032-1) experimental; urgency=low

  [Petr Salinger]   
  * New upstream snapshot.
    - fix for FreeBSD-SA-13:06.mmap (CVE-2013-2171). (Closes: #712892)
  * refresh all patches
  * switch to gcc-4.8
  * disable 901_disable_optimization_2.diff
  * bump Breaks of grub due to #699002.

  [Steven McDonald]
  * add 922_cc_version.diff
  * temporary patch debugger.diff

  [ Robert Millan ]
  * patches/913_uudecode.diff: Remove. It is pointless when using
    WITHOUT_SOURCELESS.
  * Simplify handling of debug mode. To enable/disable debug options,
    just edit sys/conf/DEBIAN in 999_config.diff and comment/uncomment
    the appropriate line.
  * Use xz for deb compression.

 -- Robert Millan <rmh@debian.org>  Tue, 02 Jul 2013 12:39:41 +0200

kfreebsd-10 (10.0~svn242489-1) experimental; urgency=low

  * Update to SVN 242489
    * Includes Upstream fix for SCTP DoS (Closes: #686963)
    * Drop xfs and ntfs modules not build upstream currently

 -- Christoph Egger <christoph@debian.org>  Sun, 30 Sep 2012 18:13:53 -0700

kfreebsd-10 (10.0~svn240469-1) experimental; urgency=low

  * Add byacc to Build-Depends.

 -- Robert Millan <rmh@debian.org>  Wed, 25 Jul 2012 19:00:45 +0200

kfreebsd-10 (10.0~svn238475-2) experimental; urgency=low

  * Remove broken -I. from aicasm CFLAGS.

 -- Robert Millan <rmh@debian.org>  Sun, 22 Jul 2012 10:33:41 +0200

kfreebsd-10 (10.0~svn238475-1) experimental; urgency=low

  * New upstream snapshot.

 -- Robert Millan <rmh@debian.org>  Sun, 15 Jul 2012 14:09:47 +0200

kfreebsd-10 (10.0~svn237137-1) experimental; urgency=low

  * New upstream snapshot.
    - Fix for FreeBSD SA-12:06, aka CVE-2012-0217.  (Closes: #677299)

 -- Robert Millan <rmh@debian.org>  Fri, 15 Jun 2012 20:59:04 +0200
