@@ -1,6 +1,8 @@
 kfreebsd-10 (10.0~svn252032-2) UNRELEASED; urgency=low
 
   * Remove 951_disable_mk_magic.diff, use -DWITHOUT_CTF instead.
+  * Split kernel_cc into cc_cmd and cc_pkg (this makes it easier to
+    enable clang when desired).
 
  -- Robert Millan <rmh@debian.org>  Tue, 02 Jul 2013 17:05:10 +0200
 
